<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.nasty.receiptly.SpendingFragment">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="42sp"
        android:paddingTop="8dp"
        android:paddingLeft="8dp"
        android:paddingRight="8dp"
        android:text="@string/frag_spending_you_spent" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="92dp"
            android:paddingBottom="6dp"
            android:text="@string/frag_spending_dollar_sign"
            android:textColor="@color/colorPrimary"
            android:textSize="62sp" />

        <!-- Dummy data hardcoded for debugging purposes -->

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/frag_spending_total_textview"
            android:textSize="62sp"
            android:textColor="@color/colorPrimary"
            android:paddingLeft="4dp"
            android:text="0.00" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/frag_spending_this"
            android:textColor="@color/colorAccent"
            android:paddingLeft="186dp"
            android:paddingBottom="4dp"
            android:textSize="24sp" />

        <Spinner
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="2dp"
            android:id="@+id/frag_spending_total_spinner"
            android:entries="@array/frag_spending_total_spinner_options">
        </Spinner>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingTop="8dp"
            android:paddingLeft="4dp"
            android:paddingRight="8dp"
            android:text="@string/frag_spending_more_than"
            android:textSize="24sp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/colorAccent"
            android:textSize="24sp"
            android:text="@string/frag_spending_notify_me"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="numberDecimal"
            android:maxLength="7"
            android:paddingRight="6dp"
            android:textSize="24sp"
            android:hint="@string/frag_spending_this_amt_hint" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/frag_spending_divider"
            android:textColor="@color/colorAccent"
            android:textSize="24sp"
            android:paddingRight="8dp"/>

        <CheckBox
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="onNotificationsEnabled"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="8dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/frag_spending_total_tax"
            android:paddingRight="4dp"
            android:textSize="24sp"/>

        <!-- Dummy data hardcoded for debugging purposes -->

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="24sp"
            android:textColor="@color/colorPrimary"
            android:text="0.00"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="8dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/frag_spending_taxation_rate"
            android:paddingRight="4dp"
            android:textSize="24sp"/>

        <!-- Dummy data hardcoded for debugging purposes -->

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="24sp"
            android:textColor="@color/colorPrimary"
            android:text="0.0%"/>
    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/frag_spending_highest_trans"
        android:textColor="@color/colorAccent"
        android:textSize="16sp"
        android:paddingTop="8dp"/>

    <ListView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="8dp"
        android:id="@+id/frag_spending_listview">
    </ListView>
</LinearLayout>
